Update comment in CSS for clarity

--- a/maptest-prototype.html
+++ b/maptest-prototype.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pylon Placement Puzzle (64x36 Grid) - Dynamic Controls</title>
     <style>
-        /* General layout and centering */
+        /* General layout and centering - resaving...*/
         body { 
             font-family: sans-serif; 
             display: flex; 
